--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,11 +19,8 @@ services:
     labels:
         maintainer: "NoHarm.ai <suporte@noharm.ai>"
     logging:
-      driver: awslogs
-      options:
-          awslogs-region: sa-east-1
-          awslogs-group: IntegracaoNifi
-          awslogs-stream: nifi/schema
+      driver: "json-file"
+      options: {}
     networks:
       noharm-net:
         ipv4_address: 172.19.0.1
