--- a/noharm.env
+++ b/noharm.env
@@ -11,19 +11,19 @@ NIFI_PID_DIR=/opt/nifi/nifi-current/run
 NIFI_LOG_DIR=/opt/nifi/nifi-current/logs
 	  
 #getname
-DB_TYPE=firebird  #  oracle / postgre / mssql / firebird
-DB_HOST=10.0.1.155
-DB_DATABASE=/database/base/NOHARM.fdb
-DB_PORT=3050
-DB_USER=NOHARM
-DB_PASS=noharm@2023
+DB_TYPE=oracle 	 #  oracle / postgre / mssql / firebird
+DB_HOST=0.0.0.0  # set database host or ip address
+DB_DATABASE=MVOP # set service name or SID
+DB_PORT=1521
+DB_USER=NOHARM	 # set username
+DB_PASS=password # set password
 POOL_SIZE=1
 POOL_MAX_OVERFLOW=2
 POOL_TIMEOUT=2000
 CACHE_TIMEOUT=3
 CACHE_THRESHOLD=1000
-DB_QUERY=SELECT nome FROM atendimento WHERE fkpessoa =  {}
-DB_MULTI_QUERY=SELECT DISTINCT(nome), fkpessoa FROM atendimento WHERE fkpessoa IN ({})
+DB_QUERY=SELECT NOME FROM VW_PACIENTES WHERE IDPACIENTE =  {}
+DB_MULTI_QUERY=SELECT DISTINCT(NOME), IDPACIENTE FROM VW_PACIENTES WHERE IDPACIENTE IN ({})
 	  
 #anony
 PATH=/usr/local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
