--- a/noharm.env
+++ b/noharm.env
@@ -24,7 +24,8 @@ CACHE_TIMEOUT=3
 CACHE_THRESHOLD=1000
 DB_QUERY=SELECT NOME FROM VW_PACIENTES WHERE IDPACIENTE =  {}
 DB_MULTI_QUERY=SELECT DISTINCT(NOME), IDPACIENTE FROM VW_PACIENTES WHERE IDPACIENTE IN ({})
-	  
+SSL_URL=https://noharm.ai/ssl
+
 #anony
 PATH=/usr/local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 LANG=C.UTF-8
