--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       - "python main.py"
     container_name: "noharm-anony"
     hostname: "noharm-anony"
-    image: "noharm/anony:0.1"
+    image: "noharm/anony:latest"
     env_file:
       - ./noharm.env    
     ipc: "private"
