--- a/noharm.env
+++ b/noharm.env
@@ -23,8 +23,8 @@ POOL_MAX_OVERFLOW=2
 POOL_TIMEOUT=2000
 CACHE_TIMEOUT=3
 CACHE_THRESHOLD=1000
-DB_QUERY=SELECT NOME FROM VW_PACIENTES WHERE IDPACIENTE =  {}
-DB_MULTI_QUERY=SELECT DISTINCT(NOME), IDPACIENTE FROM VW_PACIENTES WHERE IDPACIENTE IN ({})
+DB_QUERY=SELECT DISTINCT NOME FROM VW_PACIENTES WHERE FKPESSOA =  {}
+DB_MULTI_QUERY=SELECT DISTINCT(NOME), FKPESSOA FROM VW_PACIENTES WHERE FKPESSOA IN ({})
 
 #anony
 FLASK_APP=anonyapp
