--- a/noharm.env
+++ b/noharm.env
@@ -9,7 +9,16 @@ NIFI_HOME=/opt/nifi/nifi-current
 NIFI_TOOLKIT_HOME=/opt/nifi/nifi-toolkit-current
 NIFI_PID_DIR=/opt/nifi/nifi-current/run
 NIFI_LOG_DIR=/opt/nifi/nifi-current/logs
-	  
+
+#certs
+#AUTH: "tls"
+#KEYSTORE_TYPE: "JKS"
+#KEYSTORE_PASSWORD: secret
+#KEYSTORE_PATH: "/opt/nifi/nifi-current/conf/noharm-nifi/keystore.jks"
+#TRUSTSTORE_TYPE: "JKS"
+#TRUSTSTORE_PASSWORD: secret
+#TRUSTSTORE_PATH: "/opt/nifi/nifi-current/conf/noharm-nifi/truststore.jks"
+
 #getname
 PORT=443
 DB_TYPE=oracle
