Fix dot env file

--- a/noharm.env
+++ b/noharm.env
@@ -11,13 +11,13 @@ NIFI_PID_DIR=/opt/nifi/nifi-current/run
 NIFI_LOG_DIR=/opt/nifi/nifi-current/logs
 
 #certs
-AUTH: "tls"
-KEYSTORE_TYPE: "JKS"
-KEYSTORE_PASSWORD: d4d0df4c643c6ea4ada70451c0c7d950
-KEYSTORE_PATH: "/opt/nifi/nifi-current/conf/noharm-nifi/keystore.jks"
-TRUSTSTORE_TYPE: "JKS"
-TRUSTSTORE_PASSWORD: 4bc73749cca686a5ba87a20400d3e357
-TRUSTSTORE_PATH: "/opt/nifi/nifi-current/conf/noharm-nifi/truststore.jks"
+AUTH=tls
+KEYSTORE_TYPE=JKS
+KEYSTORE_PASSWORD=d4d0df4c643c6ea4ada70451c0c7d950
+KEYSTORE_PATH=/opt/nifi/nifi-current/conf/noharm-nifi/keystore.jks
+TRUSTSTORE_TYPE=JKS
+TRUSTSTORE_PASSWORD=4bc73749cca686a5ba87a20400d3e357
+TRUSTSTORE_PATH=/opt/nifi/nifi-current/conf/noharm-nifi/truststore.jks
 
 #getname
 PORT=443
